Made a code change

--- a/src/Web/Pages/Admin/EditCatalogItem.cshtml
+++ b/src/Web/Pages/Admin/EditCatalogItem.cshtml
@@ -1,4 +1,6 @@
-﻿@page
+﻿/*this is my new update code saved*/
+
+@page
 @{
     ViewData["Title"] = "Admin - Edit Catalog";
     @model EditCatalogItemModel
